# Hublands

./: .gitignore  LICENSE  README.md
.github/workflows/: refresh.yml
labels/: labels.json
pipeline/: build_full.sh  pyproject.toml
pipeline/src/atlas/: clean.py  cluster.py  common.py  embed.py  fetch.py  label.py  pack.py  project.py  publish.py  raster.py  refresh.py  semantic.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/og/: route.tsx
web/app/browse/: page.tsx
web/app/map/: page.tsx
web/app/methods/: page.tsx
web/components/: AtlasApp.tsx  BrowseTable.tsx  ChartFrame.tsx  DateSlider.tsx  DetailPanel.tsx  Hero.tsx  Legend.tsx  MapCanvas.tsx  MethodsStats.tsx  SearchBar.tsx  ThemeToggle.tsx  Tooltip.tsx  TopBar.tsx
web/lib/: data.ts  filters.ts  palette.ts  url-state.ts  whimsy.ts
web/lib/workers/: filter.worker.ts  search.worker.ts
web/styles/: tokens.css
