[project]
name = "atlas"
version = "0.1.0"
description = "Hublands offline pipeline: fetch, embed, project, cluster, label, raster, pack, publish"
requires-python = ">=3.11,<3.12"
dependencies = [
    "huggingface-hub>=0.24",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5.6",
    "scikit-learn>=1.5",
    "scikit-image>=0.24",
    "scipy>=1.13",
    "pillow>=10.3",
    "joblib>=1.4",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]
